--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -238,12 +238,12 @@
                                     </a>
                                 </li>
                                 <li class="sidebar-item">
-                                    <a class="sidebar-link" href="@Url.Action("Index", "incapacidades")">
+                                    <a class="sidebar-link" href="@Url.Action("Index", "aguinaldos")">
                                         <span class="align-middle">Gestionar Aguinaldos</span>
                                     </a>
                                 </li>
                                 <li class="sidebar-item">
-                                    <a class="sidebar-link" href="@Url.Action("Index", "permisos_solicitados")">
+                                    <a class="sidebar-link" href="@Url.Action("Index", "liquidaciones")">
                                         <span class="align-middle">Gestionar Liquidacion</span>
                                     </a>
                                 </li>
@@ -282,6 +282,11 @@
                                 <li class="sidebar-item">
                                     <a class="sidebar-link" href="@Url.Action("Gestion", "planillas")">
                                         <span class="align-middle">Registro de Planillas</span>
+                                    </a>
+                                </li>
+                                <li class="sidebar-item">
+                                    <a class="sidebar-link" href="@Url.Action("Gestion", "aguinaldos")">
+                                        <span class="align-middle">Registro de Aguinaldos</span>
                                     </a>
                                 </li>
                             </ul>
