--- a/Views/incapacidades/Create.cshtml
+++ b/Views/incapacidades/Create.cshtml
@@ -1,70 +1,58 @@
 ﻿@model DataBase_RH_BanderaBlanca.Models.Incapacidad_Comprobante
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Crear Incapacidad";
 }
 
-<h2>Create</h2>
+<div class="container mt-5">
+    <h2 class="text-center mb-4">Registrar Incapacidad</h2>
 
-@using (Html.BeginForm("Create", "incapacidades", FormMethod.Post, new { enctype = "multipart/form-data" }))
-{
-    @Html.AntiForgeryToken()
+    @using (Html.BeginForm("Create", "incapacidades", FormMethod.Post, new { enctype = "multipart/form-data" }))
+    {
+        @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        <h4>incapacidad</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.incapacidad.Fecha_Incapacidad, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.incapacidad.Fecha_Incapacidad, new { htmlAttributes = new { @class = "form-control", type = "date" } })
-                @Html.ValidationMessageFor(model => model.incapacidad.Fecha_Incapacidad, "", new { @class = "text-danger" })
+        <div class="mb-4">
+            <h4 class="text-muted">Detalles de Incapacidad</h4>
+            <hr />
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+            <div class="row">
+                <div class="col-md-6 mb-3">
+                    @Html.LabelFor(model => model.incapacidad.Fecha_Incapacidad, "Fecha de Inicio", htmlAttributes: new { @class = "form-label" })
+                    @Html.EditorFor(model => model.incapacidad.Fecha_Incapacidad, new { htmlAttributes = new { @class = "form-control", type = "date" } })
+                    @Html.ValidationMessageFor(model => model.incapacidad.Fecha_Incapacidad, "", new { @class = "text-danger" })
+                </div>
+
+                <div class="col-md-6 mb-3">
+                    @Html.LabelFor(model => model.incapacidad.Fecha_Final_Incapacidad, "Fecha Final", htmlAttributes: new { @class = "form-label" })
+                    @Html.EditorFor(model => model.incapacidad.Fecha_Final_Incapacidad, new { htmlAttributes = new { @class = "form-control", type = "date" } })
+                    @Html.ValidationMessageFor(model => model.incapacidad.Fecha_Final_Incapacidad, "", new { @class = "text-danger" })
+                </div>
+
+                <div class="col-md-6 mb-3">
+                    @Html.LabelFor(model => model.incapacidad.idCatalogo_Incapacidad, "Tipo de Incapacidad", htmlAttributes: new { @class = "form-label" })
+                    @Html.DropDownListFor(model => model.incapacidad.idCatalogo_Incapacidad, (SelectList)ViewBag.idCatalogo_Incapacidad, new { @class = "form-select" })
+                    @Html.ValidationMessageFor(model => model.incapacidad.idCatalogo_Incapacidad, "", new { @class = "text-danger" })
+                </div>
+
+                <div class="col-md-6 mb-3">
+                    @Html.LabelFor(model => model.incapacidad.Detalle_Incapacidad, "Detalles", htmlAttributes: new { @class = "form-label" })
+                    @Html.EditorFor(model => model.incapacidad.Detalle_Incapacidad, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.incapacidad.Detalle_Incapacidad, "", new { @class = "text-danger" })
+                </div>
+
+                <!-- Campo de archivo en una columna completa -->
+                <div class="col-md-12 mb-3">
+                    @Html.LabelFor(model => model.comprobantes.Imagen_Comprobante, "Imagen Comprobante", htmlAttributes: new { @class = "form-label" })
+                    <input type="file" class="form-control" name="fileUpload" accept="image/png, image/gif, image/jpeg" />
+                    @Html.ValidationMessageFor(model => model.comprobantes.Imagen_Comprobante, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="d-flex justify-content-end">
+                <input type="submit" value="Guardar" class="btn btn-primary" />
+                @Html.ActionLink("Cancelar", "Index", null, new { @class = "btn btn-secondary ms-2" })
             </div>
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.incapacidad.Fecha_Final_Incapacidad, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.incapacidad.Fecha_Final_Incapacidad, new { htmlAttributes = new { @class = "form-control", type = "date" } })
-                @Html.ValidationMessageFor(model => model.incapacidad.Fecha_Final_Incapacidad, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.incapacidad.idCatalogo_Incapacidad, "idCatalogo_Incapacidad", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownListFor(model => model.incapacidad.idCatalogo_Incapacidad, (SelectList)ViewBag.idCatalogo_Incapacidad, new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.incapacidad.idCatalogo_Incapacidad, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.incapacidad.Detalle_Incapacidad, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.incapacidad.Detalle_Incapacidad, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.incapacidad.Detalle_Incapacidad, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.comprobantes.Imagen_Comprobante, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <input type="file" class="form-control" name="fileUpload" accept="image/png, image/gif, image/jpeg"  />
-                @Html.ValidationMessageFor(model => model.comprobantes.Imagen_Comprobante, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
+    }
 </div>
