--- a/Views/permisos_solicitados/Create.cshtml
+++ b/Views/permisos_solicitados/Create.cshtml
@@ -1,44 +1,39 @@
 ﻿@model DataBase_RH_BanderaBlanca.Models.permisos_solicitados
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Registrar Permiso";
 }
 
-<h2>Create</h2>
+<div class="container mt-5">
+    <h2 class="text-center mb-4">Registrar Permiso</h2>
 
-@using (Html.BeginForm()) 
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>permisos_solicitados</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Fecha_Permiso, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Fecha_Permiso, new { htmlAttributes = new { @class = "form-control", type = "date" } })
-                @Html.ValidationMessageFor(model => model.Fecha_Permiso, "", new { @class = "text-danger" })
+    @using (Html.BeginForm("Create", "permisos_solicitados", FormMethod.Post))
+    {
+        @Html.AntiForgeryToken()
+
+        <div class="mb-4">
+            <h4 class="text-muted">Detalles del Permiso</h4>
+            <hr />
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+            <div class="row">
+                <div class="col-md-6 mb-3">
+                    @Html.LabelFor(model => model.Fecha_Permiso, "Fecha del Permiso", htmlAttributes: new { @class = "form-label" })
+                    @Html.EditorFor(model => model.Fecha_Permiso, new { htmlAttributes = new { @class = "form-control", type = "date" } })
+                    @Html.ValidationMessageFor(model => model.Fecha_Permiso, "", new { @class = "text-danger" })
+                </div>
+
+                <div class="col-md-6 mb-3">
+                    @Html.LabelFor(model => model.Detalle_Permiso, "Detalle del Permiso", htmlAttributes: new { @class = "form-label" })
+                    @Html.EditorFor(model => model.Detalle_Permiso, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Detalle_Permiso, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="d-flex justify-content-end">
+                <input type="submit" value="Registrar" class="btn btn-primary" />
+                @Html.ActionLink("Cancelar", "Index", null, new { @class = "btn btn-secondary ms-2" })
             </div>
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Detalle_Permiso, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Detalle_Permiso, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Detalle_Permiso, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
+    }
 </div>
