--- a/Views/personas/Create.cshtml
+++ b/Views/personas/Create.cshtml
@@ -62,7 +62,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.personas.Fecha_Nacimiento, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.personas.Fecha_Nacimiento, new { htmlAttributes = new { @class = "form-control", type = "date" } })
+            @Html.EditorFor(model => model.personas.Fecha_Nacimiento, new { htmlAttributes = new { @class = "form-control", type = "date", max = DateTime.Today.AddYears(-18).ToString("yyyy-MM-dd") } })
             @Html.ValidationMessageFor(model => model.personas.Fecha_Nacimiento, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -150,7 +150,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.empleados.idPuestos_Laboral, "Puesto Laboral", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownListFor(model => model.empleados.idPuestos_Laboral, (SelectList)ViewBag.TipoPuesto, "Seleccione un tipo de puesto", new { @class = "form-control", @ID = "TipoPuesto" })
+            @Html.DropDownListFor(model => model.empleados.idPuestos_Laboral, (SelectList)ViewBag.TipoPuesto, "Seleccione un tipo de puesto", new { @class = "form-control", @ID = "TipoPuesto", @onchange = "ObtenerJefatura();" })
             @Html.ValidationMessageFor(model => model.empleados.idPuestos_Laboral, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -159,7 +159,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.empleados.idJefaturaDirecta, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.empleados.idJefaturaDirecta, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.DropDownListFor(model => model.empleados.idJefaturaDirecta, new SelectList(Enumerable.Empty<SelectListItem>(), "Value", "Text"), "Seleccione al jefe directo", new { @class = "form-control", id = "idJefaturaDirecta" })
             @Html.ValidationMessageFor(model => model.empleados.idJefaturaDirecta, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -167,7 +167,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.empleados.Fecha_Ingreso, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.empleados.Fecha_Ingreso, new { htmlAttributes = new { @class = "form-control", type = "date" } })
+            @Html.EditorFor(model => model.empleados.Fecha_Ingreso, new { htmlAttributes = new { @class = "form-control", type = "date", min = DateTime.Today.ToString("yyyy-MM-dd") } })
             @Html.ValidationMessageFor(model => model.empleados.Fecha_Ingreso, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -191,34 +191,10 @@
     <h1>Usuario</h1>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.usuarios.Nombre_Usuario, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.usuarios.Nombre_Usuario, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.usuarios.Nombre_Usuario, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.usuarios.Fecha_Creacion, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.usuarios.Fecha_Creacion, new { htmlAttributes = new { @class = "form-control", type = "date" } })
-            @Html.ValidationMessageFor(model => model.usuarios.Fecha_Creacion, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
         @Html.LabelFor(model => model.usuarios.idRol, "Rol", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.DropDownListFor(model => model.usuarios.idRol, (SelectList)ViewBag.idRol, "Seleccione un Rol", new { @class = "form-control", @ID = "idRol" })
             @Html.ValidationMessageFor(model => model.usuarios.idRol, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.usuarios.Estados_Sistema_idEstado, "Estado", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DropDownListFor(model => model.usuarios.Estados_Sistema_idEstado, (SelectList)ViewBag.idEstado, "Seleccione un estaado", new { @class = "form-control", @ID = "idEstado" })
-            @Html.ValidationMessageFor(model => model.usuarios.Estados_Sistema_idEstado, "", new { @class = "text-danger" })
         </div>
     </div>
 
@@ -263,6 +239,22 @@
                 $.getJSON('/personas/ObtenerDistritos', { idCanton: cantonId }, function (data) {
                     $.each(data, function (index, item) {
                         $('#Distritos').append($('<option>', {
+                            value: item.id,
+                            text: item.nombre
+                        }));
+                    });
+                });
+            }
+        }
+
+        function ObtenerJefatura() {
+            const idPuesto = $('#TipoPuesto').val();
+            $('#idJefaturaDirecta').empty().append('<option value="">Seleccione un jefe</option>');
+
+            if (idPuesto) {
+                $.getJSON('/personas/ObtenerJefatura', { idPuesto: idPuesto }, function (data) {
+                    $.each(data, function (index, item) {
+                        $('#idJefaturaDirecta').append($('<option>', {
                             value: item.id,
                             text: item.nombre
                         }));
