--- a/Views/sucursales/Create.cshtml
+++ b/Views/sucursales/Create.cshtml
@@ -1,108 +1,94 @@
 ﻿@model DataBase_RH_BanderaBlanca.Models.Sucursal
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Registrar Sucursal";
 }
 
-<h2>Create</h2>
+<div class="container mt-5">
+    <h2 class="text-center mb-4">Registrar Sucursal</h2>
 
+    @using (Html.BeginForm())
+    {
+        @Html.AntiForgeryToken()
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
+        <div class="mb-4">
+            <h4 class="text-muted">Detalles de la Sucursal</h4>
+            <hr />
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-<div class="form-horizontal">
-    <h4>sucursales</h4>
-    <hr />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(model => model.sucursales.Nombre_Sucursal, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.sucursales.Nombre_Sucursal, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.sucursales.Nombre_Sucursal, "", new { @class = "text-danger" })
+            <div class="row">
+                <div class="col-md-6 mb-3">
+                    @Html.LabelFor(model => model.sucursales.Nombre_Sucursal, "Nombre de la Sucursal", htmlAttributes: new { @class = "form-label" })
+                    @Html.EditorFor(model => model.sucursales.Nombre_Sucursal, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.sucursales.Nombre_Sucursal, "", new { @class = "text-danger" })
+                </div>
+
+                <div class="col-md-6 mb-3">
+                    @Html.LabelFor(model => model.sucursales.Fecha_Creacion, "Fecha de Creación", htmlAttributes: new { @class = "form-label" })
+                    @Html.EditorFor(model => model.sucursales.Fecha_Creacion, new { htmlAttributes = new { @class = "form-control", type = "date" } })
+                    @Html.ValidationMessageFor(model => model.sucursales.Fecha_Creacion, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-6 mb-3">
+                    @Html.LabelFor(model => model.direcciones_Empresas.idProvincia, "Provincia", htmlAttributes: new { @class = "form-label" })
+                    @Html.DropDownListFor(model => model.direcciones_Empresas.idProvincia, (SelectList)ViewBag.Provincias, "Seleccione una provincia", new { @class = "form-control", @onchange = "CambiarProvincia();", id = "Provincias" })
+                    @Html.ValidationMessageFor(model => model.direcciones_Empresas.idProvincia, "", new { @class = "text-danger" })
+                </div>
+
+                <div class="col-md-6 mb-3">
+                    @Html.LabelFor(model => model.direcciones_Empresas.idCanton, "Cantón", htmlAttributes: new { @class = "form-label" })
+                    @Html.DropDownListFor(model => model.direcciones_Empresas.idCanton, new SelectList(Enumerable.Empty<SelectListItem>(), "Value", "Text"), "Seleccione un cantón", new { @class = "form-control", @onchange = "CambiarCanton();", id = "Cantones" })
+                    @Html.ValidationMessageFor(model => model.direcciones_Empresas.idCanton, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-6 mb-3">
+                    @Html.LabelFor(model => model.direcciones_Empresas.idDistrito, "Distrito", htmlAttributes: new { @class = "form-label" })
+                    @Html.DropDownListFor(model => model.direcciones_Empresas.idDistrito, new SelectList(Enumerable.Empty<SelectListItem>(), "Value", "Text"), "Seleccione un distrito", new { @class = "form-control", id = "Distritos" })
+                    @Html.ValidationMessageFor(model => model.direcciones_Empresas.idDistrito, "", new { @class = "text-danger" })
+                </div>
+
+                <div class="col-md-6 mb-3">
+                    @Html.LabelFor(model => model.direcciones_Empresas.Direccion_Especifica_Sucursal, "Dirección Específica", htmlAttributes: new { @class = "form-label" })
+                    @Html.EditorFor(model => model.direcciones_Empresas.Direccion_Especifica_Sucursal, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.direcciones_Empresas.Direccion_Especifica_Sucursal, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-6 mb-3">
+                    @Html.LabelFor(model => model.telefonos.Numero_Telefonico_Sucursal, "Número Telefónico", htmlAttributes: new { @class = "form-label" })
+                    @Html.EditorFor(model => model.telefonos.Numero_Telefonico_Sucursal, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.telefonos.Numero_Telefonico_Sucursal, "", new { @class = "text-danger" })
+                </div>
+
+                <div class="col-md-6 mb-3">
+                    @Html.LabelFor(model => model.telefonos.Detalle_Numero_Sucursal, "Detalle del Teléfono", htmlAttributes: new { @class = "form-label" })
+                    @Html.EditorFor(model => model.telefonos.Detalle_Numero_Sucursal, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.telefonos.Detalle_Numero_Sucursal, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-6 mb-3">
+                    @Html.LabelFor(model => model.telefonos.idCatalogo_Telefonico, "Tipo de Teléfono", htmlAttributes: new { @class = "form-label" })
+                    @Html.DropDownListFor(model => model.telefonos.idCatalogo_Telefonico, (SelectList)ViewBag.TipoTelefono, "Seleccione un tipo de teléfono", new { @class = "form-control", @ID = "TipoTelefono" })
+                    @Html.ValidationMessageFor(model => model.telefonos.idCatalogo_Telefonico, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="d-flex justify-content-end">
+                <input type="submit" value="Registrar" class="btn btn-primary" />
+                @Html.ActionLink("Cancelar", "Index", null, new { @class = "btn btn-secondary ms-2" })
+            </div>
         </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.sucursales.Fecha_Creacion, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.sucursales.Fecha_Creacion, new { htmlAttributes = new { @class = "form-control", type = "date" } })
-            @Html.ValidationMessageFor(model => model.sucursales.Fecha_Creacion, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.direcciones_Empresas.idProvincia, "Provincia", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DropDownListFor(model => model.direcciones_Empresas.idProvincia, (SelectList)ViewBag.Provincias, "Seleccione una provincia", new { @class = "form-control", @onchange = "CambiarProvincia();", id = "Provincias" })
-            @Html.ValidationMessageFor(model => model.direcciones_Empresas.idProvincia, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.direcciones_Empresas.idCanton, "Cantón", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DropDownListFor(model => model.direcciones_Empresas.idCanton, new SelectList(Enumerable.Empty<SelectListItem>(), "Value", "Text"), "Seleccione un cantón", new { @class = "form-control", @onchange = "CambiarCanton();", id = "Cantones" })
-            @Html.ValidationMessageFor(model => model.direcciones_Empresas.idCanton, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.direcciones_Empresas.idDistrito, "Distrito", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DropDownListFor(model => model.direcciones_Empresas.idDistrito, new SelectList(Enumerable.Empty<SelectListItem>(), "Value", "Text"), "Seleccione un distrito", new { @class = "form-control", id = "Distritos" })
-            @Html.ValidationMessageFor(model => model.direcciones_Empresas.idDistrito, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.direcciones_Empresas.Direccion_Especifica_Sucursal, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.direcciones_Empresas.Direccion_Especifica_Sucursal, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.direcciones_Empresas.Direccion_Especifica_Sucursal, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.telefonos.Numero_Telefonico_Sucursal, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.telefonos.Numero_Telefonico_Sucursal, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.telefonos.Numero_Telefonico_Sucursal, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.telefonos.Detalle_Numero_Sucursal, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.telefonos.Detalle_Numero_Sucursal, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.telefonos.Detalle_Numero_Sucursal, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.telefonos.idCatalogo_Telefonico, "Tipo de Telefono", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DropDownListFor(model => model.telefonos.idCatalogo_Telefonico, (SelectList)ViewBag.TipoTelefono, "Seleccione un tipo de telefono", new { @class = "form-control", @ID = "TipoTelefono" })
-            @Html.ValidationMessageFor(model => model.telefonos.idCatalogo_Telefonico, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-default" />
-        </div>
-    </div>
-</div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
+    }
 </div>
 
 @section Scripts {
-
     @Scripts.Render("~/bundles/jqueryval")
     <script>
         function CambiarProvincia() {
@@ -138,7 +124,4 @@
             }
         }
     </script>
-
-
 }
-
